--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ replay_pid*
 ### Gradle template
 .gradle
 **/build/
-!src/**/build/
+!menu/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
