Removed `.codetogether.ignore` and added it to `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@ local.properties
 # Ignore Gradle GUI config
 gradle-app.setting
 
+# Code together file
+.codetogether.ignore
+
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
